created Insertion and selection methods

--- a/Program1.ipynb
+++ b/Program1.ipynb
@@ -1,13 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2026-02-04T19:05:17.679724Z",
+     "start_time": "2026-02-04T19:05:17.667967Z"
+    }
    },
-   "outputs": [],
+   "cell_type": "code",
    "source": [
     "#void insertion sort(lst)\n",
     "def insertion_sort(arr):\n",
@@ -32,7 +33,101 @@
     "                min_index = j\n",
     "        (array[ind], array[min_index]) = (array[min_index], array[ind])\n",
     "    return array"
-   ]
+   ],
+   "id": "9f42104aad296441",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-04T19:08:59.262612Z",
+     "start_time": "2026-02-04T19:08:59.252584Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#Testing\n",
+    "lst = [5,2,4,7,9]\n",
+    "print(insertion_sort(lst))\n",
+    "print(selection_sort(lst))\n",
+    "\n",
+    "lst2 = [6,8,9,3,23,2,4545,34,43]\n",
+    "print(insertion_sort(lst2))\n",
+    "print(selection_sort(lst2))\n"
+   ],
+   "id": "e796ffae361fbec1",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 5, 7, 9]\n",
+      "[2, 4, 5, 7, 9]\n"
+     ]
+    }
+   ],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-04T19:10:57.810754Z",
+     "start_time": "2026-02-04T19:10:57.800402Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import time\n",
+    "def benchmark(algorithm, lst):\n",
+    "    arr = list(lst)\n",
+    "    t0 = time.perf_counter()\n",
+    "    out = algorithm(arr)\n",
+    "    if out is not None: _ = out\n",
+    "    return time.perf_counter() - t0"
+   ],
+   "id": "c6617bad65f5a4c7",
+   "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-04T19:27:33.809804Z",
+     "start_time": "2026-02-04T19:27:33.799724Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#Bechnmark\n",
+    "print(benchmark(insertion_sort, lst))\n",
+    "print(benchmark(selection_sort, lst))\n",
+    "\n",
+    "print(benchmark(insertion_sort, lst2))\n",
+    "print(benchmark(selection_sort, lst2))"
+   ],
+   "id": "19fa9b16806161a4",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.199930794537067e-06\n",
+      "6.600050255656242e-06\n",
+      "4.400033503770828e-06\n",
+      "1.309998333454132e-05\n"
+     ]
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "7bc3c5229aaab103"
   }
  ],
  "metadata": {
