--- a/Program1.ipynb
+++ b/Program1.ipynb
@@ -4,8 +4,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2026-02-04T19:05:17.679724Z",
-     "start_time": "2026-02-04T19:05:17.667967Z"
+     "end_time": "2026-02-04T19:31:52.467482Z",
+     "start_time": "2026-02-04T19:31:52.454080Z"
     }
    },
    "cell_type": "code",
@@ -36,13 +36,13 @@
    ],
    "id": "9f42104aad296441",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-04T19:08:59.262612Z",
-     "start_time": "2026-02-04T19:08:59.252584Z"
+     "end_time": "2026-02-04T19:31:52.521146Z",
+     "start_time": "2026-02-04T19:31:52.513150Z"
     }
    },
    "cell_type": "code",
@@ -52,7 +52,7 @@
     "print(insertion_sort(lst))\n",
     "print(selection_sort(lst))\n",
     "\n",
-    "lst2 = [6,8,9,3,23,2,4545,34,43]\n",
+    "lst2 = [6,8,9,3,23,2,4545,34,43,100,32,43,5555]\n",
     "print(insertion_sort(lst2))\n",
     "print(selection_sort(lst2))\n"
    ],
@@ -63,17 +63,19 @@
      "output_type": "stream",
      "text": [
       "[2, 4, 5, 7, 9]\n",
-      "[2, 4, 5, 7, 9]\n"
+      "[2, 4, 5, 7, 9]\n",
+      "[2, 3, 6, 8, 9, 23, 32, 34, 43, 43, 100, 4545, 5555]\n",
+      "[2, 3, 6, 8, 9, 23, 32, 34, 43, 43, 100, 4545, 5555]\n"
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-04T19:10:57.810754Z",
-     "start_time": "2026-02-04T19:10:57.800402Z"
+     "end_time": "2026-02-04T19:31:52.609445Z",
+     "start_time": "2026-02-04T19:31:52.602552Z"
     }
    },
    "cell_type": "code",
@@ -88,13 +90,13 @@
    ],
    "id": "c6617bad65f5a4c7",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-04T19:27:33.809804Z",
-     "start_time": "2026-02-04T19:27:33.799724Z"
+     "end_time": "2026-02-04T19:31:52.644538Z",
+     "start_time": "2026-02-04T19:31:52.634409Z"
     }
    },
    "cell_type": "code",
@@ -112,22 +114,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.199930794537067e-06\n",
-      "6.600050255656242e-06\n",
-      "4.400033503770828e-06\n",
-      "1.309998333454132e-05\n"
+      "5.799927748739719e-06\n",
+      "7.900060154497623e-06\n",
+      "5.800044164061546e-06\n",
+      "1.1399970389902592e-05\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 9
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-04T19:31:52.698315Z",
+     "start_time": "2026-02-04T19:31:52.694073Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "7bc3c5229aaab103"
+   "id": "7bc3c5229aaab103",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
